--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "developer-portfolio",
+  "homepage": "https://emmalouiselane.github.io/developer-portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "terser": "^5.31.2",
     "vite": "^5.3.3"
   },
