--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "developer-portfolio",
-  "homepage": "https://emmalouiselane.github.io/developer-portfolio/",
+  "homepage": "https://emmalouiselane.github.io/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
