--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@contentful/rich-text-react-renderer": "^16.0.1",
     "@fontsource-variable/montserrat": "^5.0.17",
     "@fontsource/merriweather": "^5.0.8",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "dotenv": "^16.5.0",
     "gatsby": "^5.14.3",
     "gatsby-plugin-feed": "^5.14.0",
