--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/merriweather": "^5.0.8",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "bootstrap": "^5.3.6",
     "dotenv": "^16.5.0",
     "gatsby": "^5.14.3",
     "gatsby-plugin-feed": "^5.14.0",
@@ -31,6 +32,7 @@
     "moment": "^2.30.1",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
