--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/merriweather": "^5.0.8",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@isoterik/react-word-cloud": "^1.2.0",
     "bootstrap": "^5.3.6",
     "dotenv": "^16.5.0",
     "gatsby": "^5.14.3",
