--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "bootstrap": "^5.3.6",
     "dotenv": "^16.5.0",
     "gatsby": "^5.14.4",
+    "gatsby-plugin-canonical-urls": "^5.14.0",
     "gatsby-plugin-feed": "^5.14.0",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.14.0",
     "gatsby-plugin-postcss": "^6.14.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sharp": "^5.14.0",
+    "gatsby-plugin-sitemap": "^6.14.0",
     "gatsby-remark-images": "^7.14.0",
     "gatsby-remark-prismjs": "^7.14.0",
     "gatsby-remark-responsive-iframe": "^6.14.0",
