--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-manifest": "^5.14.0",
     "gatsby-plugin-postcss": "^6.14.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
+    "gatsby-plugin-sass": "^6.14.0",
     "gatsby-plugin-sharp": "^5.14.0",
     "gatsby-plugin-sitemap": "^6.14.0",
     "gatsby-remark-images": "^7.14.0",
@@ -38,7 +39,8 @@
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "sass": "^1.89.2"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
