--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@contentful/rich-text-types": "^17.0.1",
     "@fontsource-variable/montserrat": "^5.2.6",
     "@fontsource/merriweather": "^5.2.9",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@isoterik/react-word-cloud": "^1.2.0",
