--- a/.github/workflows/build-on-publish.yml
+++ b/.github/workflows/build-on-publish.yml
@@ -49,4 +49,4 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ github.token }}
