--- a/.github/workflows/build-on-publish.yml
+++ b/.github/workflows/build-on-publish.yml
@@ -1,10 +1,14 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: contentful-content-update
+# Workflow for building and deploying the Astro site to GitHub Pages
+name: Deploy Astro Site
 
 on:
+  push:
+    branches: ["main"]
   # Runs on pushes of contentful publish events
- repository_dispatch:
+  repository_dispatch:
     types: [contentful-content-update]
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 # Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
 permissions:
@@ -18,7 +22,6 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
@@ -27,24 +30,34 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'npm'
+          cache-dependency-path: astro-site/package-lock.json
+
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps
+        run: npm ci
+        working-directory: astro-site
+
       - name: Build
         run: npm run build
+        working-directory: astro-site
         env:
-          GATSBY_CONTENTFUL_SPACE_ID: ${{ secrets.GATSBY_CONTENTFUL_SPACE_ID }}
-          GATSBY_CONTENTFUL_DELIVERY_TOKEN: ${{ secrets.GATSBY_CONTENTFUL_DELIVERY_TOKEN }}
+          # Mapping existing Gatsby secrets to new Astro env vars
+          CONTENTFUL_SPACE_ID: ${{ secrets.GATSBY_CONTENTFUL_SPACE_ID }}
+          CONTENTFUL_DELIVERY_TOKEN: ${{ secrets.GATSBY_CONTENTFUL_DELIVERY_TOKEN }}
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
+        
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: public
+          path: astro-site/dist
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
