--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,15 +36,12 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
-          cache-dependency-path: astro-site/package-lock.json
           
       - name: Install dependencies
         run: npm ci
-        working-directory: astro-site
         
       - name: Build
         run: npm run build
-        working-directory: astro-site
         env:
           CONTENTFUL_SPACE_ID: ${{ secrets.GATSBY_CONTENTFUL_SPACE_ID }}
           CONTENTFUL_DELIVERY_TOKEN: ${{ secrets.GATSBY_CONTENTFUL_DELIVERY_TOKEN }}
@@ -55,7 +52,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: astro-site/dist
+          path: dist
           
       - name: Deploy to GitHub Pages
         id: deployment
