--- a/package.json
+++ b/package.json
@@ -20,16 +20,25 @@
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@isoterik/react-word-cloud": "^1.3.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@tailwindcss/vite": "^4.1.17",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "astro": "^5.16.4",
-    "bootstrap": "^5.3.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "contentful": "^11.9.0",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.556.0",
     "moment": "^2.30.1",
     "react": "^19.2.1",
-    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.1",
-    "sass": "^1.94.2"
+    "sass": "^1.94.2",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.17"
+  },
+  "devDependencies": {
+    "tw-animate-css": "^1.4.0"
   }
 }
