--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "astro-site",
+  "name": "spark-lane-astro-site",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -34,11 +34,13 @@
     "moment": "^2.30.1",
     "react": "^19.2.1",
     "react-dom": "^19.2.3",
+    "sanitize-html": "^2.17.0",
     "sass": "^1.97.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
+    "@types/sanitize-html": "^2.16.0",
     "tw-animate-css": "^1.4.0"
   }
 }
