--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "moment": "^2.30.1",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-toastify": "^11.0.5",
     "sanitize-html": "^2.17.0",
     "sass": "^1.97.3",
     "tailwind-merge": "^3.4.0",
