--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spark-lane-astro-site",
   "type": "module",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -22,6 +22,7 @@
     "@isoterik/react-word-cloud": "^1.3.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
+    "@sparklane.dev/sparklane-recipecard-react": "^1.1.0",
     "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
